--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="./dist/global.css">
 </head>
 <body>
-  
+  <div class="partnershipcontainer">
+    <img src="https://h-o.co.il/media/wysiwyg/1058_HO_ACTIVE_1324x8805_1.jpg" alt="girls">
+  </div>
 </body>
 </html>
