--- a/cart/cart.html
+++ b/cart/cart.html
@@ -11,6 +11,10 @@
     <img class="img" src="./Photos/school.png" alt="school">
   </div>
 
+  <div></div>
+
+
+
   <div class="carousel">
     <div class="carousel-inner">
       <div class="slide"><img src="./Photos/לבן.png" alt="תמונה 1"></div>
